@@ -36,6 +36,24 @@ a brief description beside it.
 		hbox.pack_start(gtk.Label("These are the vanilla sources patched with the Gentoo patchset. These\nare generally considered stable."), expand=gtk.FALSE, fill=gtk.FALSE, padding=20)
 		vert.pack_start(hbox, expand=gtk.FALSE, fill=gtk.FALSE, padding=20)
 
+		self.kernel_sources['gentoo-dev-sources'] = gtk.RadioButton(self.kernel_sources['vanilla-sources'], "gentoo-dev-sources")
+		self.kernel_sources['gentoo-dev-sources'].set_name("gentoo-dev-sources")
+		self.kernel_sources['gentoo-dev-sources'].connect("toggled", self.stage_selected, "gentoo-dev-sources")
+		self.kernel_sources['gentoo-dev-sources'].set_size_request(150, -1)
+		hbox = gtk.HBox(gtk.FALSE, 0)
+		hbox.pack_start(self.kernel_sources['gentoo-dev-sources'], expand=gtk.FALSE, fill=gtk.FALSE, padding=5)
+		hbox.pack_start(gtk.Label("These are the vanilla sources patched with the Gentoo patchset. These\nare generally considered stable."), expand=gtk.FALSE, fill=gtk.FALSE, padding=20)
+		vert.pack_start(hbox, expand=gtk.FALSE, fill=gtk.FALSE, padding=20)
+
+		self.kernel_sources['development-sources'] = gtk.RadioButton(self.kernel_sources['vanilla-sources'], "development-sources")
+		self.kernel_sources['development-sources'].set_name("development-sources")
+		self.kernel_sources['development-sources'].connect("toggled", self.stage_selected, "development-sources")
+		self.kernel_sources['development-sources'].set_size_request(150, -1)
+		hbox = gtk.HBox(gtk.FALSE, 0)
+		hbox.pack_start(self.kernel_sources['development-sources'], expand=gtk.FALSE, fill=gtk.FALSE, padding=5)
+		hbox.pack_start(gtk.Label("These are the vanilla sources patched with the Gentoo patchset. These\nare generally considered stable."), expand=gtk.FALSE, fill=gtk.FALSE, padding=20)
+		vert.pack_start(hbox, expand=gtk.FALSE, fill=gtk.FALSE, padding=20)
+
 		self.kernel_sources['hardened-sources'] = gtk.RadioButton(self.kernel_sources['vanilla-sources'], "hardened-sources")
 		self.kernel_sources['hardened-sources'].set_name("hardened-sources")
 		self.kernel_sources['hardened-sources'].connect("toggled", self.stage_selected, "hardened-sources")
