@@ -1,11 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.54 2005/01/28 00:52:30 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.55 2005/01/28 05:43:40 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
 
   27 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
-  add len(sys.argv) check so gtkfe.py can be run without -p
+  add len(sys.argv) check so gtkfe.py can be run without -p. Readded
+  development-sources and gentoo-dev-sources to Kernel.py
 
   26 Jan 2005; John Laliberte <allanonl@bu.edu>
   ExtraPackages.py - major overhaul of the screen.  Uses objects for the
